# mcp-client-playground

./: README.md  main.py  mcp-servers.example.json  mcp_config.example.json  pyproject.toml
docs/: test-modularization-report.md
src/core/: config.py  logger.py  settings.py
src/mcps/clients/: __init__.py  base.py  gemini.py  openai.py
src/mcps/servers/: __init__.py  example.py
tests/: __init__.py  conftest.py  test_config.py  test_gemini_client.py  test_logging.py  test_openai_client.py  test_server_loader.py
